@@ -5,15 +5,16 @@ import com.basic.myspringboot.controller.dto.StudentDTO;
 import com.basic.myspringboot.entity.Student;
 import com.basic.myspringboot.entity.StudentDetail;
 import com.basic.myspringboot.exception.BusinessException;
+import com.basic.myspringboot.exception.ErrorCode;
 import com.basic.myspringboot.repository.StudentDetailRepository;
 import com.basic.myspringboot.repository.StudentRepository;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,21 +27,21 @@ public class StudentService {
     public List<StudentDTO.Response> getAllStudents() {
         return studentRepository.findAll()
                 .stream()
-                //.map(student -> StudentDTO.Response.fromEntity(student))
                 .map(StudentDTO.Response::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public StudentDTO.Response getStudentById(Long id) {
         Student student = studentRepository.findByIdWithStudentDetail(id)
-                .orElseThrow(() -> new BusinessException("Student not found with id: " + id, HttpStatus.NOT_FOUND));
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
+                        "Student", "id", id));
         return StudentDTO.Response.fromEntity(student);
     }
 
     public StudentDTO.Response getStudentByStudentNumber(String studentNumber) {
         Student student = studentRepository.findByStudentNumber(studentNumber)
-                .orElseThrow(() -> new BusinessException("Student not found with student number: "
-                        + studentNumber, HttpStatus.NOT_FOUND));
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
+                        "Student", "student number", studentNumber));
         return StudentDTO.Response.fromEntity(student);
     }
 
@@ -48,50 +49,45 @@ public class StudentService {
     public StudentDTO.Response createStudent(StudentDTO.Request request) {
         // Validate student number is not already in use
         if (studentRepository.existsByStudentNumber(request.getStudentNumber())) {
-            throw new BusinessException("Student already exists with student number: "
-                    + request.getStudentNumber(),
-                    HttpStatus.CONFLICT);
+            throw new BusinessException(ErrorCode.STUDENT_NUMBER_DUPLICATE,
+                    request.getStudentNumber());
         }
 
         // Validate email is not already in use (if provided)
-        if (request.getDetailRequest() != null &&
-                request.getDetailRequest().getEmail() != null &&
-                !request.getDetailRequest().getEmail().isEmpty() &&
-                studentDetailRepository.existsByEmail(request.getDetailRequest().getEmail())) {
-            throw new BusinessException("Student detail already exists with email: "
-                    + request.getDetailRequest().getEmail(),
-                    HttpStatus.CONFLICT);
+        if (hasEmailAndExists(request.getDetailRequest())) {
+            throw new BusinessException(ErrorCode.EMAIL_DUPLICATE,
+                    request.getDetailRequest().getEmail());
         }
 
         // Validate phone number is not already in use
-        if (request.getDetailRequest() != null &&
-                studentDetailRepository.existsByPhoneNumber(request.getDetailRequest().getPhoneNumber())) {
-            throw new BusinessException("Student detail already exists with phone number: "
-                    + request.getDetailRequest().getPhoneNumber(),
-                    HttpStatus.CONFLICT);
+        if (hasDetailAndPhoneNumberExists(request.getDetailRequest())) {
+            throw new BusinessException(ErrorCode.PHONE_NUMBER_DUPLICATE,
+                    request.getDetailRequest().getPhoneNumber());
         }
 
-        // Create student entity
+        // Create student 엔티티 생성
         Student student = Student.builder()
-                .name(request.getName())
-                .studentNumber(request.getStudentNumber())
+                .name(request.getName())  //이름
+                .studentNumber(request.getStudentNumber())  //학번
                 .build();
 
-        // Create student detail if provided
+        // Create StudentDetail 엔티티 생성
         if (request.getDetailRequest() != null) {
             StudentDetail studentDetail = StudentDetail.builder()
-                    .address(request.getDetailRequest().getAddress())
-                    .phoneNumber(request.getDetailRequest().getPhoneNumber())
-                    .email(request.getDetailRequest().getEmail())
-                    .dateOfBirth(request.getDetailRequest().getDateOfBirth())
+                    .address(request.getDetailRequest().getAddress()) //주소
+                    .phoneNumber(request.getDetailRequest().getPhoneNumber()) //전화번호
+                    .email(request.getDetailRequest().getEmail()) //이메일
+                    .dateOfBirth(request.getDetailRequest().getDateOfBirth()) //생년월일
+                    //생성하는 StudentDetail과 연관된 Student 엔티티 객체를 저장
                     .student(student)
                     .build();
-
+            //양방향 연관관계이므로 Student와 연관된 StduentDetail 엔티티 객체를 저장
             student.setStudentDetail(studentDetail);
         }
 
-        // Save and return the student
+        // Student와 StudentDetail의 라이프사이클이 동일하므로 Student만 저장합
         Student savedStudent = studentRepository.save(student);
+        // Student를 StudentDTO.Response 로 변환
         return StudentDTO.Response.fromEntity(savedStudent);
     }
 
@@ -99,15 +95,15 @@ public class StudentService {
     public StudentDTO.Response updateStudent(Long id, StudentDTO.Request request) {
         // Find the student
         Student student = studentRepository.findById(id)
-                .orElseThrow(() -> new BusinessException("Student not found with id: "
-                        + id, HttpStatus.NOT_FOUND));
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
+                        "Student", "id", id));
 
-        // Check if another student already has the student number
+        // 저장된 학번과 요청한 학번이 일치하지 않으면
         if (!student.getStudentNumber().equals(request.getStudentNumber()) &&
+                //요청한 학번이 중복되는지 체크하기 위해서 해당학번으로 Student 조회
                 studentRepository.existsByStudentNumber(request.getStudentNumber())) {
-            throw new BusinessException("Student already exists with student number: "
-                    + request.getStudentNumber(),
-                    HttpStatus.CONFLICT);
+            throw new BusinessException(ErrorCode.STUDENT_NUMBER_DUPLICATE,
+                    request.getStudentNumber());
         }
 
         // Update student basic info
@@ -116,33 +112,29 @@ public class StudentService {
 
         // Update student detail if provided
         if (request.getDetailRequest() != null) {
+            //Student가 연관된 StudentDetail 객체를 가져오기
             StudentDetail studentDetail = student.getStudentDetail();
 
-            // Create new detail if not exists
+            // Create new detail if not exists ( 저장된 StudentDetail 정보가 없을 경우 )
             if (studentDetail == null) {
+                // 새로운 StudentDetail 객체생성
                 studentDetail = new StudentDetail();
+                //연관된 Student 객체 저장
                 studentDetail.setStudent(student);
+                //연관된 StudenDetail 객체 저장
                 student.setStudentDetail(studentDetail);
             }
 
             // Validate email is not already in use (if changing)
-            if (request.getDetailRequest().getEmail() != null &&
-                    !request.getDetailRequest().getEmail().isEmpty() &&
-                    (studentDetail.getEmail() == null || !studentDetail.getEmail()
-                            .equals(request.getDetailRequest().getEmail())) &&
-                    studentDetailRepository.existsByEmail(request.getDetailRequest().getEmail())) {
-                throw new BusinessException("Student detail already exists with email: "
-                        + request.getDetailRequest().getEmail(),
-                        HttpStatus.CONFLICT);
+            if (isEmailChangingAndExists(studentDetail, request.getDetailRequest())) {
+                throw new BusinessException(ErrorCode.EMAIL_DUPLICATE,
+                        request.getDetailRequest().getEmail());
             }
 
             // Validate phone number is not already in use (if changing)
-            if ((studentDetail.getPhoneNumber() == null || !studentDetail.getPhoneNumber()
-                    .equals(request.getDetailRequest().getPhoneNumber())) &&
-                    studentDetailRepository.existsByPhoneNumber(request.getDetailRequest().getPhoneNumber())) {
-                throw new BusinessException("Student detail already exists with phone number: "
-                        + request.getDetailRequest().getPhoneNumber(),
-                        HttpStatus.CONFLICT);
+            if (isPhoneNumberChangingAndExists(studentDetail, request.getDetailRequest())) {
+                throw new BusinessException(ErrorCode.PHONE_NUMBER_DUPLICATE,
+                        request.getDetailRequest().getPhoneNumber());
             }
 
             // Update detail fields
@@ -160,8 +152,39 @@ public class StudentService {
     @Transactional
     public void deleteStudent(Long id) {
         if (!studentRepository.existsById(id)) {
-            throw new BusinessException("Student not found with id: " + id, HttpStatus.NOT_FOUND);
+            throw new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
+                    "Student", "id", id);
         }
         studentRepository.deleteById(id);
+    }
+
+    // Helper methods to improve readability and reduce duplication
+
+    private boolean hasEmailAndExists(StudentDTO.StudentDetailDTO detailRequest) {
+        return detailRequest != null &&
+                detailRequest.getEmail() != null &&
+                !detailRequest.getEmail().isEmpty() &&
+                studentDetailRepository.existsByEmail(detailRequest.getEmail());
+    }
+
+    private boolean hasDetailAndPhoneNumberExists(StudentDTO.StudentDetailDTO detailRequest) {
+        return detailRequest != null &&
+                studentDetailRepository.existsByPhoneNumber(detailRequest.getPhoneNumber());
+    }
+
+    private boolean isEmailChangingAndExists(StudentDetail currentDetail,
+                                             StudentDTO.StudentDetailDTO newDetail) {
+        return newDetail.getEmail() != null &&
+                !newDetail.getEmail().isEmpty() &&
+                (currentDetail.getEmail() == null ||
+                        !currentDetail.getEmail().equals(newDetail.getEmail())) &&
+                studentDetailRepository.existsByEmail(newDetail.getEmail());
+    }
+
+    private boolean isPhoneNumberChangingAndExists(StudentDetail currentDetail,
+                                                   StudentDTO.StudentDetailDTO newDetail) {
+        return (currentDetail.getPhoneNumber() == null ||
+                !currentDetail.getPhoneNumber().equals(newDetail.getPhoneNumber())) &&
+                studentDetailRepository.existsByPhoneNumber(newDetail.getPhoneNumber());
     }
 }
